semgrep/tests/e2e/snapshots/test_rule_parser/test_rule_parser__failure__error_messages/badlanguage/error.txt
running 1 rules...
error: invalid language
  --> rules/syntax/badlanguage.yaml:7
6 |     message: "$X is being assigned to one or two"
7 |     languages: [rust]
  |                ^^^^^^
8 |     severity: WARNING

unsupported language rust

